# prefix_opt

./: Cargo.toml  README.md
prefix_opt/: Cargo.toml
prefix_opt/src/: bin.rs  core.rs  lib.rs  main.rs
prefix_opt_derive/: Cargo.toml
prefix_opt_derive/src/: generics.rs  lib.rs  variant_data.rs
prefixopt/: Cargo.toml
prefixopt/src/: base_types.rs  core.rs  lib.rs  main.rs  parsable.rs  std_impl.rs
prefixopt_derive/: Cargo.toml
prefixopt_derive/src/: enum_data.rs  generics.rs  lib.rs  variant_data.rs
prefixopt_derive/tests/: enums.rs  generics.rs  structs.rs
src/: concat_ref.rs  core.rs  lib.rs  parsable.rs  std_impl.rs
tests/: stdlib.rs
