[package]
name = "prefixopt"
version = "0.2.0"
authors = ["Ruben Lapauw <Ruben.Lapauw@cs.kuleuven.be>"]
license = "MIT/Apache-2.0"
description = "See Read Me. Automatically derive options from structs and enums to use with clap."
readme = "README.md"

[dependencies]
#clap = {version= "2.23.1", features=["debug"]}
clap = "^2.23"
map_in_place = "0.1.0"

[lib]
