[package]
name = "prefixopt"
version = "0.2.1"
authors = ["Ruben Lapauw <Ruben.Lapauw@cs.kuleuven.be>"]
license = "MIT/Apache-2.0"
description = "See Read Me. Automatically derive options from structs and enums to use with clap."
readme = "README.md"
repository = "https://github.com/Rupsbant/prefix_opt"

[dependencies]
#clap = {version= "2.23.1", features=["debug"]}
clap = "^2.23"
map_in_place = "0.1.0"

[lib]
