[package]
name = "prefixopt_derive"
version = "0.1.0"
authors = ["Ruben Lapauw <Ruben.Lapauw@cs.kuleuven.be>"]
license = "MIT/Apache-2.0"

[dependencies]
syn = "^0.11.4"
quote = "^0.3.12"
clap = "^2.23"
prefixopt = { path = "../prefixopt" }

[lib]
proc-macro = true

[[bin]]
name = "example"
path = "bin/example.rs"
