[package]
name = "prefixopt_derive"
version = "0.2.1"
authors = ["Ruben Lapauw <Ruben.Lapauw@cs.kuleuven.be>"]
license = "MIT/Apache-2.0"
description = "See ReadMe. Automatically derive options from structs and enums to use with clap."
readme = "../README.md"
repository = "https://github.com/Rupsbant/prefix_opt"

[dependencies]
syn = "^0.11.4"
quote = "^0.3.12"
clap = "^2.23"
prefixopt = "0.2.1"

[lib]
proc-macro = true

[[bin]]
name = "example"
path = "bin/example.rs"
